--- a/index.ipynb
+++ b/index.ipynb
@@ -280,21 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-88-1db618bef6d1>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-89-4a4d11db640a>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-88-1db618bef6d1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for city_pop in list(range(0:12 ,len(cities))):\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-89-4a4d11db640a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for city_pop in list(range([0:12] ,len(cities))):\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "city_populations = []\n",
-    "for city_pop in list(range(0:12 ,len(cities))):\n",
+    "for city_pop in list(range([0:1 ,len(cities))):\n",
     "    population = cities[0]['Population']\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
