--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city_pop in list(range([0:1 ,len(cities))):\n",
+    "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = cities[0]['Population']\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
