--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    x = cities[2]\n",
+    "    x = cities[2]['']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
