--- a/index.ipynb
+++ b/index.ipynb
@@ -280,63 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194}]"
+       "[2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000,\n",
+       " 2581000]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    x = cities[2]['']\n",
+    "    x = cities[2]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
