--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    x = cities[1]['Population']\n",
+    "    x = cities[1] +\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
