--- a/index.ipynb
+++ b/index.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
           "12, Iguazu Falls"
          ],
          "type": "bar",
-         "uid": "249c8596-2bd0-11e9-b69c-f5af20bb571b",
+         "uid": "cf56a8a6-2bd8-11e9-b69c-f5af20bb571b",
          "x": [
           "1, Buenos Aires",
           "2, Toronto",
@@ -411,28 +411,28 @@
           "12, Iguazu Falls"
          ],
          "y": [
+          2891000,
+          2800000,
           2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000,
-          2581000
+          928850,
+          559277,
+          287651,
+          84554,
+          60000,
+          32237,
+          4000,
+          1700,
+          0
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\", [{\"name\": \"populations\", \"text\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"x\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"y\": [2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000], \"type\": \"bar\", \"uid\": \"24a11fa2-2bd0-11e9-b69c-f5af20bb571b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a268dbf8-d680-4cda-a40c-f82ad13a64a4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a268dbf8-d680-4cda-a40c-f82ad13a64a4\", [{\"name\": \"populations\", \"text\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"x\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"cf5cccea-2bd8-11e9-b69c-f5af20bb571b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\", [{\"name\": \"populations\", \"text\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"x\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"y\": [2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000], \"type\": \"bar\", \"uid\": \"24a11fa2-2bd0-11e9-b69c-f5af20bb571b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a268dbf8-d680-4cda-a40c-f82ad13a64a4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a268dbf8-d680-4cda-a40c-f82ad13a64a4\", [{\"name\": \"populations\", \"text\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"x\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"cf5cccea-2bd8-11e9-b69c-f5af20bb571b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
