--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,8 @@
    "source": [
     "city_areas = []\n",
     "for city_space in list(range(0, len(cities))):\n",
-    "    area = cities[city_space][]\n",
+    "    area = cities[city_space]['Area']\n",
+    "    city\n",
     "    "
    ]
   },
