--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,8 @@
     "city_areas = []\n",
     "for city_space in list(range(0, len(cities))):\n",
     "    area = cities[city_space]['Area']\n",
-    "    city\n",
+    "    city_area.append(area\n",
+    "                    )\n",
     "    "
    ]
   },
